<resources>

    <!--App Name-->
    <string name="app_name">MoviesApp</string>

    <!--Menu Label on MainActivity-->
    <string name="sort_popularity">Most Popular</string>
    <string name="sort_rating">Highest Rated</string>
    <string name="favorite_menu">Favorite Movies</string>

    <!--Urls-->
    <string name="movies_url" translatable="false">http://api.themoviedb.org/3/movie/%s</string>
    <string name="trailer_url" translatable="false">http://api.themoviedb.org/3/movie/%s/videos</string>
    <string name="reviews_url" translatable="false">http://api.themoviedb.org/3/movie/%s/reviews</string>
    <string name="thumbnail_url" translatable="false">http://image.tmdb.org/t/p/w185/%s</string>
    <string name="youtube_url" translatable="false">https://www.youtube.com/watch?v=%s</string>
    <string name="base_url" translatable="false">http://api.themoviedb.org/</string>

    <!--Text to show when there is no network connectivity-->
    <string name="error_message">No Network Connection</string>
    <string name="no_favorite_movies">Empty Favorite Movies List</string>

    <!--Content descriptions-->
    <string name="poster_content_dsc">Movie Poster</string>
    <string name="trailer_content_dsc">Movie Trailer</string>

    <!--Formats to generate a text runtime-->
    <string name="rating_format" translatable="false">%s/10</string>

    <!--Key to identify what kinds of data need to fetch from fetch class-->
    <string name="trailer" translatable="false">trailer</string>
    <string name="reviews" translatable="false">reviews</string>

    <string name="popular" translatable="false">popular</string>
    <string name="top_rated" translatable="false">top_rated</string>

    <!--Labels-->
    <string name="trailer_label">Trailers: </string>
    <string name="favorite_label">MARK AS FAVORITE</string>
    <string name="un_favorite_label">MARK AS UN FAVORITE</string>
    <string name="review_label">Reviews: </string>
    <string name="share_title">Share</string>

    <!--Default values-->
    <string name="default_release_date">2017</string>
    <string name="default_rating">7.1/10</string>
    <string name="default_synopsis">"Before she was Wonder Woman (Gal Gadot), she was Diana, princess of the Amazons, trained to be an unconquerable warrior. Raised on a sheltered island paradise, Diana meets an American pilot (Chris Pine) who tells her about the massive conflict that's raging in the outside world. Convinced that she can stop the threat, Diana leaves her home for the first time. Fighting alongside men in a war to end all wars, she finally discovers her full powers and true destiny."</string>
    <string name="default_review">"It was a good movie as far as it goes -- resourceful characters deprived of both freedom and their memories manage to build a society and think their way out of their bondage.  The problem is that at the end, it simply stopped.  No dramatic reason for ending where it does, no resolution of why did the captors do this .  Even in a series a movie ought to have a decent local climax -- for example,  Kat and Peta winning the Hunger Games."</string>
    <string name="default_trailer_num">Trailer 1</string>
</resources>
