<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_content_dsc"
                android:src="@drawable/backdrop"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title=""
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scroll_view_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tv_release_date"
                tools:text="@string/default_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/release_date_marginBottom"
                android:layout_marginStart="@dimen/release_date_marginStart"
                android:textColor="@color/textColor"
                android:textSize="@dimen/release_date_textSize"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_rating"
                tools:text="@string/default_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="@dimen/rating_textSize"
                app:layout_constraintEnd_toEndOf="@+id/tv_release_date"
                app:layout_constraintStart_toStartOf="@+id/tv_release_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/favorite"
                android:layout_width="@dimen/favorite_width"
                android:layout_height="wrap_content"
                android:background="@color/titleColor"
                android:text="@string/favorite_label"
                android:textAlignment="center"
                android:textSize="@dimen/favorite_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/tv_release_date"
                app:layout_constraintBottom_toBottomOf="@id/tv_rating"/>

            <TextView
                android:id="@+id/tv_synopsis"
                tools:text="@string/default_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/synopsis_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <TextView
                android:id="@+id/trailer_label"
                android:text = "@string/trailer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Headline"
                android:padding="@dimen/trailer_label_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/trailer_recycler_view_paddingStart"
                android:paddingEnd="@dimen/trailer_recycler_view_paddingEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_label" />

            <TextView
                android:id="@+id/review_label"
                android:text="@string/review_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/review_label_padding"
                style="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toStartOf="@+id/rv_trailer_recycler_view"
                app:layout_constraintTop_toBottomOf="@+id/rv_trailer_recycler_view"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/review_recycler_view_paddingStart"
                android:paddingEnd="@dimen/review_recycler_view_paddingEnd"
                app:layout_constraintStart_toStartOf="@+id/review_label"
                app:layout_constraintTop_toBottomOf="@+id/review_label"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
